# fast-alt-text-check

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
fast_alt_text_check/: __init__.py  core.py
tests/: test_fast_alt_text_check.py
