[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-alt-text-check"
version = "1.0.0"
description = "Fast check images for missing alt text"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/MopicMP/fast-alt-text-check"
